--- a/css/master.css
+++ b/css/master.css
@@ -17,14 +17,22 @@ h1 {
 	text-align: center;
 }
 
+.elever {
+	padding-bottom: 100px;
+}
 .elever a {
 	text-decoration: none;
-	transition: all .2s ease;
+	transition: all .2s cubic-bezier(.01,1.66,1,.82);
 }
 
 .elever a:hover {
 	color: tomato;
 	font-size: 1.5em;
+	font-weight: 800;
+}
+
+.elever a:active {
+	color: darkcyan;
 }
 
 .elev {
